@@ -28,7 +28,7 @@ PACKAGE_BINFLAGS     =
 PACKAGE_LIBFLAGS     = 
 
 # the list of packages we depend on:
-PACKAGE_DEP          = TopObjectSelectionTools TopEventSelectionTools TopEvent TopConfiguration TopDataPreparation TopAnalysis TrigDecisionTool MuonSelectorTools xAODEgamma xAODTracking xAODEventInfo xAODTruth IsolationSelection JetSelectorTools PileupReweighting AsgTools
+PACKAGE_DEP          = TopObjectSelectionTools TopEventSelectionTools TopEvent TopConfiguration TopDataPreparation TopAnalysis TopCorrections TrigDecisionTool MuonSelectorTools xAODEgamma xAODTracking xAODEventInfo xAODTruth IsolationSelection JetSelectorTools PileupReweighting AsgTools
 
 # the list of packages we use if present, but that we can work without :
 PACKAGE_TRYDEP       = 
